sample/error/e02418.asn
E02418 DEFINITIONS ::=
BEGIN
    Seq ::= SEQUENCE {
        item1   INTEGER,
        item2   BOOLEAN
    }
    seq Seq ::= {}  -- E02418
END
